# gameboy-emulator

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build-wasm.sh
frontend/: gameboy.css  gameboy.html  icon.xcf
misc/: opcode_scraper.py
pkg/: .gitignore  gameboy_emulator.js  gameboy_emulator_bg.wasm
resources/: gbops.htm  opcode_scraper.py  opcodes
src/: cartridge.rs  commands.rs  cpu.rs  lib.rs  main.rs  register.rs  web.rs
src/lib/: cartridge.rs  commands.rs  cpu.rs  lcd.rs  lib.rs  memory.rs  register.rs  web.rs
www/: gameboy.css  gameboy.html  gameboy.js  index.html  main.js
www/javascript/: gameboy.js
www/wasm/: gameboy_emulator.d.ts  gameboy_emulator.js  gameboy_emulator_bg.wasm  gameboy_emulator_bg.wasm.d.ts
