[package]
name = "gameboy_emulator"
version = "0.1.0"
edition = "2021"

[lib]
#name = "gb_emu_lib"
path = "src/lib/lib.rs"
crate-type = ["cdylib"]

#[[bin]]
#name = "gameboy_emulator"
#path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.6"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  "console"
]
