[package]
name = "gameboy_emulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "gameboy_emulator"
path = "src/lib/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "gameboy_emulator"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
fontdue = "0.7.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.6"
features = [
  "CanvasRenderingContext2d",
  "ImageData",
  "console"
]
