[package]
name = "gameboy_emulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "gameboy_emulator"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
fontdue = "0.7.3"
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "CanvasRenderingContext2d",
  "ImageData",
  "console"
]
